--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,7 @@ body {
 }
 
 .site-nav .link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: block;
   padding-bottom: 32px;
   padding-top: 32px;
@@ -97,6 +98,23 @@ body {
 .site-nav .link.current {
   color: var(--accent-color);
 }
+.item.item-nav {
+  position: relative;
+}
+
+.link.current::after {
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+
+  content: '';
+  display: block;
+  width: 100%;
+  height: 4px;
+  border: 2px solid var(--accent-color);
+  border-radius: 4px;
+  background-color: var(--accent-color);
+}
 /* contact decoration */
 .nav-contact {
   display: flex;
@@ -106,6 +124,7 @@ body {
   margin-left: 50px;
 }
 .contact-link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: flex;
   align-items: center;
   font-weight: 500;
@@ -246,8 +265,37 @@ body {
 .features .item-img:nth-child(3n) {
   margin-right: 0;
 }
+.features.list {
+  position: relative;
+}
+.item-img {
+  position: relative;
+}
+.item-img::before {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: inline-block;
+  content: '';
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+.photo-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
 
-.logofeatures {
+  display: block;
+  width: 100%;
+  margin-bottom: 27px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-bg-color);
 }
 
 /* our team */
@@ -300,6 +348,10 @@ body {
 }
 
 .social-link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   display: flex;
   border: 1px solid var(--primary-bg-color);
   border-radius: 50%;
@@ -331,9 +383,8 @@ body {
 }
 
 .client-item {
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   width: 170px;
   height: 90px;
   border: 1px solid var(--icon-color);
@@ -348,6 +399,8 @@ body {
 }
 
 .clientlink {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -355,6 +408,7 @@ body {
   height: 100%;
   color: var(--icon-color);
 }
+
 .clientlink:focus,
 .clientlink:hover {
   color: var(--accent-color);
@@ -425,6 +479,7 @@ body {
   background: rgba(255, 255, 255, 0.1);
   color: var(--primary-bg-color);
   border-color: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link.socialmain:hover,
 .social-link.socialmain:focus {
@@ -444,6 +499,9 @@ body {
   margin-left: 8px;
 }
 .button {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   border: 1px solid transparent;
   border-radius: 4px;
   padding: 6px 22px;
@@ -465,10 +523,25 @@ body {
 }
 
 /* cards */
+.project {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .project:focus,
 .project:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.project:focus,
+.project:hover .hover-text {
+  transform: translateY(-100%);
+  opacity: 1;
+}
+
+.project:focus,
+.project:hover .thumb::before {
+  transform: translateY(0);
+  opacity: 1;
 }
 
 .features .project {
@@ -488,6 +561,42 @@ body {
   display: inline-block;
   text-decoration: none;
   color: var(--title-text-color);
+}
+
+.thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.thumb::before,
+.hover-text {
+  position: absolute;
+  left: 0;
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100%;
+  height: 100%;
+}
+
+.thumb::before {
+  transform: translateY(100%);
+  display: inline-block;
+  content: '';
+  background-color: rgba(33, 150, 243, 0.9);
+}
+
+.hover-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin: 0;
+  padding: 0 24px;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: var(--primary-bg-color);
 }
 
 .image {
@@ -517,6 +626,45 @@ body {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
+}
+
+/* MODAL */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  min-width: 528px;
+  min-height: 581px;
+  background-color: var(--primary-bg-color);
+}
+.modal-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  padding: 0;
+  width: 32px;
+  height: 32px;
+  border: 1px solid transparent;
+  border-radius: 50%;
+  background-color: var(--primary-bg-color);
 }
 
 .visually-hidden {
